Make the video to lower case

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a herf="Video.html"></a>
+    <a herf="video.html"></a>
     <h1>My Cat Wepsite</h1>
     <h2>all about my cats</h2>
 </body>
